--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-mesa (12.0.4-2ubuntu1~16.10.1) yakkety; urgency=medium
+mesa (12.0.5-0ubuntu0.16.10.1) yakkety; urgency=medium
 
-  * Bugfix backport to yakkety.
+  * New bugfix release.
+  * Backport to yakkety.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Fri, 02 Dec 2016 14:24:47 +0200
 
